--- a/_sources/class/NDiffInt/NumDiffInt_Errors.ipynb
+++ b/_sources/class/NDiffInt/NumDiffInt_Errors.ipynb
@@ -149,7 +149,7 @@
     "f'(x_1)=\\frac{f(x_2)-f(x_0)}{2h}-\\frac{h^2}{6}f^{(3)}(\\xi),\n",
     "$$\n",
     "\n",
-    "involves two things we warned about when we talked about [roundoff errors](../ErrorsModule/RoundoffAmplification).  Namely, subtraction of two similar numbers, the $f(x_2)-f(x_0)$, and division by a small number $h$.  As a result, attempting to obtain the \"exact\" value of $f`(x_1)$ by taking ever smaller $h$ is **not** a numerically stable operation as we will now demonstrate.\n",
+    "involves two things we warned about when we talked about [roundoff errors](../ErrorsModule/RoundoffAmplification).  Namely, subtraction of two similar numbers, the $f(x_2)-f(x_0)$, and division by a small number $h$.  As a result, attempting to obtain the \"exact\" value of $f'(x_1)$ by taking ever smaller $h$ is **not** a numerically stable operation as we will now demonstrate.\n",
     "\n",
     "As in our discussion of [roundoff errors](../ErrorsModule/HornersAlgorithm) let $\\mathcal{fl}(.)$ denote the finite precision arithmetic on the computer, i.e.\n",
     "\n",
@@ -178,7 +178,7 @@
     "\\frac{dE}{dh}\\approx -\\frac{\\beta}{h^2}+\\frac{h}{3}|f^{(3)}(\\xi)| = 0.\n",
     "$$\n",
     "\n",
-    "Solving this for the optimal $h_op$ gives\n",
+    "Solving this for the optimal $h_{op}$ gives\n",
     "\n",
     "$$\n",
     "h_{op}=  \\sqrt[3]{\\frac{3 \\beta}{|f^{(3)}(\\xi)|}}.\n",
@@ -191,7 +191,7 @@
     "$$ (hop)\n",
     "\n",
     "\n",
-    "**Example** Suppose we use the central difference formula to evaluate the derivative of $f(x)=e^x$.  What is the error and what is the optimal $h_op$?  \n",
+    "**Example** Suppose we use the central difference formula to evaluate the derivative of $f(x)=e^x$.  What is the error and what is the optimal $h_{op}$?  \n",
     "\n",
     "First note that we can work out the analytic derivative ($f'(x)=e^x$) and the third derivative here ($f^{(3)}(x)=e^x$).  In this case, {eq}`hop` then gives,\n",
     "\n",
@@ -242,12 +242,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c805331-c61a-4d4a-af3a-168f5e6d57ef",
+   "cell_type": "markdown",
+   "id": "2a263f76-4171-4647-8fef-bc9dfee5d0a6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Note that similar problems arise when attempting to apply numerical differentiation to noisy data (data with stochastic noise).  A similar construction with the errors being from stochastic noise rather than roundoff limits how small $h$ can be before the results for the derivative become less accurate.  In this case, a presmoothing operation to reduce the noise amplitude should be applied before attempting to construct a finite difference for the derivative."
+   ]
   }
  ],
  "metadata": {
