--- a/_sources/class/NDiffInt/GaussianInt.ipynb
+++ b/_sources/class/NDiffInt/GaussianInt.ipynb
@@ -95,25 +95,71 @@
     "\n",
     "--------\n",
     "\n",
-    "A general formula for the weights and nodes for Gauss-Legendre integration is not available.  However, the first few have all been tabulated and are listed below for reference:\n",
+    "A general formula for the weights and nodes for Gauss-Legendre integration is not available.  However, the first few have all been tabulated and are listed below for reference :\n",
     "\n",
-    "| Number of points, $n$ | Points, $x_i$ | weights, $w_i$  |\n",
-    "| --------------------- | ------------- | --------------- |\n",
-    "| : 1 :                    | : 0 :             | : 2 :               |\n"
+    "| Number of nodes, $n$ | Points, $x_i$ | weights, $w_i$  |\n",
+    "| :------------------: | :-----------: | :-------------: |\n",
+    "| 1                    | 0             | 2               |\n",
+    "| 2                    | $$\\pm \\frac{1}{\\sqrt{3}}$$ | 1     |\n",
+    "| 3                    | 0,            | $$\\frac{8}{9},$$     |\n",
+    "|                      | $$\\pm \\sqrt{\\frac{3}{5}}$$ | $$\\frac{5}{9}$$ |\n",
+    "| 4                    | $$\\pm \\sqrt{\\frac{3}{7}-\\frac{2}{7}\\sqrt{\\frac{6}{5}}},$$ | $$\\frac{18+\\sqrt{30}}{36},$$ |\n",
+    "|                      | $$\\pm \\sqrt{\\frac{3}{7}+\\frac{2}{7}\\sqrt{\\frac{6}{5}}}$$ | $$\\frac{18-\\sqrt{30}}{36}$$ |\n",
+    "| 5                    | 0,             | $$\\frac{128}{225},$$ |\n",
+    "|                      | $$\\qquad \\pm \\frac{1}{3}\\sqrt{5-2\\sqrt{\\frac{10}{7}}},\\qquad $$ | $$\\frac{322+13\\sqrt{70}}{900},$$ |\n",
+    "|                      | $$\\pm \\frac{1}{3}\\sqrt{5+2\\sqrt{\\frac{10}{7}}}$$ | $$\\frac{322-13\\sqrt{70}}{900}$$ |\n",
+    "| 7                    | 0,             | 0.41795 91836 73469, |\n",
+    "|                      | $\\pm$0.40584 51513 77397, | 0.38183 00505 05119, |\n",
+    "|                      | $\\pm$0.74153 11855 99394, | 0.27970 53914 89277, |\n",
+    "|                      | $\\pm$0.94910 79123 42759  | 0.12948 49661 68870  |\n",
+    "\n",
+    "\n",
+    "SciPy has an implementation of Gauss-Legendre integration illustrated in the example below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "31f76154-5a70-4b28-8d81-d37782cd0992",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n=1 result =  (0.4151074974205947, None)\n",
+      "n=2 result =  (0.5187644892255823, None)\n",
+      "n=3 result =  (0.4958462362382512, None)\n",
+      "n=4 result =  (0.49774446622792934, None)\n",
+      "n=5 result =  (0.49765922944191265, None)\n",
+      "n=7 result =  (0.4976611363409025, None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy import integrate\n",
+    "normaldist = lambda x: 1/np.sqrt(np.pi) * np.exp(-x**2)\n",
+    "print(\"n=1 result = \",integrate.fixed_quad(normaldist, 0.0, 2.0, n=1))\n",
+    "print(\"n=2 result = \",integrate.fixed_quad(normaldist, 0.0, 2.0, n=2))\n",
+    "print(\"n=3 result = \",integrate.fixed_quad(normaldist, 0.0, 2.0, n=3))\n",
+    "print(\"n=4 result = \",integrate.fixed_quad(normaldist, 0.0, 2.0, n=4))\n",
+    "print(\"n=5 result = \",integrate.fixed_quad(normaldist, 0.0, 2.0, n=5))\n",
+    "print(\"n=7 result = \",integrate.fixed_quad(normaldist, 0.0, 2.0, n=7))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fb5a552-de93-4f7d-a956-f51034bf6e65",
+   "metadata": {},
+   "source": [
+    "We also integrated this same function in our example for [Romberg integration](./HigherOrderInt).  The accuracy of our result for $n=7$ here (so 7 function evaluations) was only obtained in the row for 16 steps (17 function evaluations) using Romberg integration!   "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31f76154-5a70-4b28-8d81-d37782cd0992",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13a6cf46-c759-450e-a3fb-1ab44cf54aa4",
+   "id": "c5826453-ea2d-4531-a019-8e4a014a8408",
    "metadata": {},
    "outputs": [],
    "source": []
