--- a/_sources/class/NDiffInt/GaussianInt.ipynb
+++ b/_sources/class/NDiffInt/GaussianInt.ipynb
@@ -100,14 +100,14 @@
     "| Number of nodes, $n$ | Points, $x_i$ | weights, $w_i$  |\n",
     "| :------------------: | :-----------: | :-------------: |\n",
     "| 1                    | 0             | 2               |\n",
-    "| 2                    | $$\\pm \\frac{1}{\\sqrt{3}}$$ | 1     |\n",
-    "| 3                    | 0,            | $$\\frac{8}{9},$$     |\n",
-    "|                      | $$\\pm \\sqrt{\\frac{3}{5}}$$ | $$\\frac{5}{9}$$ |\n",
-    "| 4                    | $$\\pm \\sqrt{\\frac{3}{7}-\\frac{2}{7}\\sqrt{\\frac{6}{5}}},$$ | $$\\frac{18+\\sqrt{30}}{36},$$ |\n",
-    "|                      | $$\\pm \\sqrt{\\frac{3}{7}+\\frac{2}{7}\\sqrt{\\frac{6}{5}}}$$ | $$\\frac{18-\\sqrt{30}}{36}$$ |\n",
-    "| 5                    | 0,             | $$\\frac{128}{225},$$ |\n",
-    "|                      | $$\\qquad \\pm \\frac{1}{3}\\sqrt{5-2\\sqrt{\\frac{10}{7}}},\\qquad $$ | $$\\frac{322+13\\sqrt{70}}{900},$$ |\n",
-    "|                      | $$\\pm \\frac{1}{3}\\sqrt{5+2\\sqrt{\\frac{10}{7}}}$$ | $$\\frac{322-13\\sqrt{70}}{900}$$ |\n",
+    "| 2                    | $\\pm \\frac{1}{\\sqrt{3}}$ | 1     |\n",
+    "| 3                    | 0,            | $\\frac{8}{9},$    |\n",
+    "|                      | $\\pm \\sqrt{\\frac{3}{5}}$ | $\\frac{5}{9}$ |\n",
+    "| 4                    | $\\pm \\sqrt{\\frac{3}{7}-\\frac{2}{7}\\sqrt{\\frac{6}{5}}},$ | $\\frac{18+\\sqrt{30}}{36},$ |\n",
+    "|                      | $\\pm \\sqrt{\\frac{3}{7}+\\frac{2}{7}\\sqrt{\\frac{6}{5}}}$| $\\frac{18-\\sqrt{30}}{36}$ |\n",
+    "| 5                    | 0,             | $\\frac{128}{225},$ |\n",
+    "|                      | $\\qquad \\pm \\frac{1}{3}\\sqrt{5-2\\sqrt{\\frac{10}{7}}},\\qquad $ | $\\frac{322+13\\sqrt{70}}{900},$ |\n",
+    "|                      | $\\pm \\frac{1}{3}\\sqrt{5+2\\sqrt{\\frac{10}{7}}}$ | $\\frac{322-13\\sqrt{70}}{900}$ |\n",
     "| 7                    | 0,             | 0.41795 91836 73469, |\n",
     "|                      | $\\pm$0.40584 51513 77397, | 0.38183 00505 05119, |\n",
     "|                      | $\\pm$0.74153 11855 99394, | 0.27970 53914 89277, |\n",
