--- a/_sources/class/NDiffInt/GaussianInt.ipynb
+++ b/_sources/class/NDiffInt/GaussianInt.ipynb
@@ -106,7 +106,7 @@
     "| 4                    | $\\pm \\sqrt{\\frac{3}{7}-\\frac{2}{7}\\sqrt{\\frac{6}{5}}},$ | $\\frac{18+\\sqrt{30}}{36},$ |\n",
     "|                      | $\\pm \\sqrt{\\frac{3}{7}+\\frac{2}{7}\\sqrt{\\frac{6}{5}}}$| $\\frac{18-\\sqrt{30}}{36}$ |\n",
     "| 5                    | 0,             | $\\frac{128}{225},$ |\n",
-    "|                      | $\\qquad \\pm \\frac{1}{3}\\sqrt{5-2\\sqrt{\\frac{10}{7}}},\\qquad $ | $\\frac{322+13\\sqrt{70}}{900},$ |\n",
+    "|                      | $\\pm \\frac{1}{3}\\sqrt{5-2\\sqrt{\\frac{10}{7}}},$ | $\\frac{322+13\\sqrt{70}}{900},$ |\n",
     "|                      | $\\pm \\frac{1}{3}\\sqrt{5+2\\sqrt{\\frac{10}{7}}}$ | $\\frac{322-13\\sqrt{70}}{900}$ |\n",
     "| 7                    | 0,             | 0.41795 91836 73469, |\n",
     "|                      | $\\pm$0.40584 51513 77397, | 0.38183 00505 05119, |\n",
