--- a/_sources/class/NDiffInt/GaussianInt.ipynb
+++ b/_sources/class/NDiffInt/GaussianInt.ipynb
@@ -43,11 +43,11 @@
     "\n",
     "**Proof:**  First look at the case where the degree of $p(x)$ is less than $n$.  Then\n",
     "\n",
-    "$$ p(x) = \\sum{i=0}^{n-1} L_i^n(x) p(x_i) $$\n",
+    "$$ p(x) = \\sum_{i=0}^{n-1} L_i^n(x) p(x_i) $$\n",
     "\n",
     "is an exact interpolation of $p(x)$ (the [interpolation error](../InterpFit/InterpErrors) involves $\\frac{d^n p(x)}{dx^n}$ which is zero for a polynomial of degree less than $n$).  Hence,\n",
     "\n",
-    "$$\\int_{-1}^1 p(x)dx = \\int_{-1}^1 \\sum{i=0}^{n-1} L_i^n(x) p(x_i) = \\sum{i=0}^{n-1} c_i p(x_i),$$\n",
+    "$$\\int_{-1}^1 p(x)dx = \\int_{-1}^1 \\sum_{i=0}^{n-1} L_i^n(x) p(x_i) = \\sum_{i=0}^{n-1} c_i p(x_i),$$\n",
     "\n",
     "as claimed in the theorem.  Now suppose that the degree of $p(x)$ is at least $n$ but less than or equal to $2n-1$.  Then we can write \n",
     "\n",
